@@ -5,11 +5,15 @@ import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.Keys;
 import io.jsonwebtoken.security.SignatureException;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.security.Key;
 
+/**
+ * JWT Token 을 관리합니다.
+ */
 @Component
 public class JwtUtil {
     private final Key key;
@@ -18,6 +22,12 @@ public class JwtUtil {
         key = Keys.hmacShaKeyFor(secret.getBytes());
     }
 
+    /**
+     * 인증 토큰을 생성하여 반환합니다.
+     * 
+     * @param userId 회원 id
+     * @return 인증 토큰
+     */
     public String encode(Long userId) {
         return Jwts.builder()
                 .claim("userId", userId)
@@ -25,8 +35,14 @@ public class JwtUtil {
                 .compact();
     }
 
+    /**
+     * 올바른 토큰 이라면 복호화하고, 잘못된 토큰은 예외를 던집니다.
+     *
+     * @param token 인증 토큰
+     * @return 회원 정보
+     */
     public Claims decode(String token) {
-        if (token == null || token.isBlank()) {
+        if (token == null || StringUtils.isBlank(token)) {
             throw new InvalidTokenException(token);
         }
 
